--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\Orchard\src\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.12.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\Orchard\src\packages\log4net.2.0.12\lib\net45\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\Orchard\src\packages\Microsoft.IdentityModel.JsonWebTokens.5.2.4\lib\net451\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
@@ -420,10 +423,12 @@
     <Compile Include="AppleEnvironment\Services\MerchantDomainAssociationService.cs" />
     <Compile Include="AppleEnvironment\ViewModels\MerchantDomainAssociationViewModel.cs" />
     <Compile Include="AuditTrail\Drivers\AuditTrailOutputSettingsPartDriver.cs" />
+    <Compile Include="AuditTrail\Extensions\LaserAuditTrailHelper.cs" />
     <Compile Include="AuditTrail\Features\AuditTrailFeatureEventHandler.cs" />
     <Compile Include="AuditTrail\Handlers\AuditTrailOutputSettingsPartHandler.cs" />
     <Compile Include="AuditTrail\Models\AuditTrailOutputSettingsPart.cs" />
     <Compile Include="AuditTrail\Providers\ChannelsAuditTrailProvider.cs" />
+    <Compile Include="AuditTrail\Services\TrailLogTrimmingBackgroundTask.cs" />
     <Compile Include="AuditTrail\ViewModels\AuditTrailOutputSettingsPartViewModel.cs" />
     <Compile Include="ColorPicker\ColorPickerField.cs" />
     <Compile Include="ColorPicker\ColorPickerFieldDriver.cs" />
