--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="BuildWebCompiler" version="1.12.405" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
