Added stylesheet for tinymce enhancement visuals in the editor.

--- a/src/Modules/Laser.Orchard.StartupConfig/compilerconfig.json
+++ b/src/Modules/Laser.Orchard.StartupConfig/compilerconfig.json
@@ -8,5 +8,15 @@
     "options": {
       "sourceMap": true
     }
+  },
+  {
+    "outputFile": "Styles/tinymce-enhancement.css",
+    "inputFile": "Assets/tinymce-enhancement.scss",
+    "minify": {
+      "enabled": true
+    },
+    "options": {
+      "sourceMap": true
+    }
   }
 ]
