WIP: handle adjusting permissions related to widgets when working with WidgetContainers so we can use Securable and such to "filter" what each role can manage on contents.

--- a/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
+++ b/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Models\WidgetExPart.cs" />
     <Compile Include="Permissions.cs" />
     <Compile Include="ResourceManifest.cs" />
+    <Compile Include="Security\WidgetExSecurityEventHandler.cs" />
     <Compile Include="Services\IWidgetManager.cs" />
     <Compile Include="Services\ILayerManager.cs" />
     <Compile Include="Services\WidgetContainerPartDumperService.cs" />
