--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -565,6 +565,7 @@
     <Compile Include="Settings\DisplayTextPartSettingsHooks.cs" />
     <Compile Include="Settings\JsonDataTablePartSettingsHooks.cs" />
     <Compile Include="Settings\IdentityPartOnEveryTypeDefinitionHooks.cs" />
+    <Compile Include="ShapeTableProviders\TenantEnginesCache.cs" />
     <Compile Include="ShapeTableProviders\TenantRazorViewEngineProvider.cs" />
     <Compile Include="ShapeTableProviders\TenantShapeBindingStrategy.cs" />
     <Compile Include="ShortCodes\Abstractions\DescribeContext.cs" />
