properly manage caching the correct alternate for tenant

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -565,8 +565,9 @@
     <Compile Include="Settings\DisplayTextPartSettingsHooks.cs" />
     <Compile Include="Settings\JsonDataTablePartSettingsHooks.cs" />
     <Compile Include="Settings\IdentityPartOnEveryTypeDefinitionHooks.cs" />
-    <Compile Include="ShapeTableProviders\TenantEnginesCache.cs" />
-    <Compile Include="ShapeTableProviders\TenantRazorViewEngineProvider.cs" />
+    <Compile Include="TenantViewEngine\TenantEnginesCache.cs" />
+    <Compile Include="TenantViewEngine\TenantRazorViewEngine.cs" />
+    <Compile Include="TenantViewEngine\TenantRazorViewEngineProvider.cs" />
     <Compile Include="ShapeTableProviders\TenantShapeBindingStrategy.cs" />
     <Compile Include="ShortCodes\Abstractions\DescribeContext.cs" />
     <Compile Include="ShortCodes\Abstractions\IShortCodeProvider.cs" />
