--- a/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
+++ b/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
@@ -318,6 +318,9 @@
   <ItemGroup>
     <Content Include="Views\PasswordChangeForm.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Orchard.Users\Account\ChangeExpiredPassword.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
