--- a/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
+++ b/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
@@ -274,7 +274,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\MenuItem.cshtml" />
+    <Content Include="Views\SimpleMenuItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Elements\Column.cshtml" />
