--- a/src/Themes/Laser.Bootstrap/Laser.Bootstrap.csproj
+++ b/src/Themes/Laser.Bootstrap/Laser.Bootstrap.csproj
@@ -227,9 +227,9 @@
     <Content Include="Views\Layout.cshtml" />
     <Content Include="Views\LogOn.cshtml" />
     <Content Include="Views\Menu.cshtml" />
-    <Content Include="Views\MenuItem.cshtml" />
-    <Content Include="Views\MenuItemLink.cshtml" />
-    <Content Include="Views\MenuItemLinkdd.cshtml" />
+    <Content Include="Views\SimpleMenuItem.cshtml" />
+    <Content Include="Views\SimpleMenuItemLink.cshtml" />
+    <Content Include="Views\SimpleMenuItemLinkdd.cshtml" />
     <Content Include="Views\Message.cshtml" />
     <Content Include="Views\OpenAuthLogOn.cshtml" />
     <Content Include="Views\OpenAuthRegister.cshtml" />
