Added task creation at hidden string settings update.

--- a/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
+++ b/src/Modules/Laser.Orchard.HiddenFields/Laser.Orchard.HiddenFields.csproj
@@ -105,6 +105,7 @@
     <Compile Include="FilterEditors\HiddenStringFieldFilterEditor.cs" />
     <Compile Include="Handlers\HiddenStringFieldAuthorizationEventHandler.cs" />
     <Compile Include="Handlers\HiddenStringFieldHandler.cs" />
+    <Compile Include="Handlers\HiddenStringFieldValueUpdateTaskHandler.cs" />
     <Compile Include="HiddenFieldsMigrations.cs" />
     <Compile Include="HiddenFieldsPermissions.cs" />
     <Compile Include="Projections\HiddenStringFieldFilter.cs" />
