Manage Cache and View Permissions for user+info alias in WebApiController

--- a/src/Modules/Laser.Orchard.WebServices/Laser.Orchard.WebServices.csproj
+++ b/src/Modules/Laser.Orchard.WebServices/Laser.Orchard.WebServices.csproj
@@ -188,6 +188,10 @@
       <Project>{9d49df40-ae74-4cce-b628-a1b26e99b2d4}</Project>
       <Name>Laser.Orchard.Commons</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Contrib.Profile\Contrib.Profile.csproj">
+      <Project>{bb5c57f4-d9cb-4440-89a6-d9ff9f41e4e3}</Project>
+      <Name>Contrib.Profile</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Contrib.Widgets\Contrib.Widgets.csproj">
       <Project>{a6b41d71-280d-49de-8e7c-607632d59d15}</Project>
       <Name>Contrib.Widgets</Name>
